--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h4>General Do's and Don'ts:</h4>
 		<ul>
 			<li>DO your research and make sure you qualify for the position you are applying for!</li>
-			<li>DON'T discuss compensation/salary during the interview!</li>
+			<li>DON'T discuss compensation/salary during the interview! Wait for the offer before negotiating salary!</li>
 			<li>DO enjoy the process, there is lots to learn for everyone!</li>
 			<li>DON'T fool yourself into thinking you already have the position, you likely do not!</li>
 			<li>DO double and triple check your resume for accuracy as well as spelling/grammatical errors!</li>
@@ -28,10 +28,10 @@
 		<h4>Pre-Interview</h4>
 		<ul>
 			<li>Research the company. Understand who you are applying to and their mission/culture!</li>
-			<li>Prepare for common interview questions (such as a small blurb about yourself, your strengths and weaknesses, prior experiences, soft and technical skills,etc.)</li>
+			<li>Prepare for common interview questions (such as a small blurb about yourself, your strengths and weaknesses, prior experiences, soft and technical skills, etc.)</li>
 			<li>Prepare questions for the interviewer, you are interviewing them as much as they are interviewing you. (see below for example questions).</li>
 			<li>Review all technical requirements listed in the job posting and refresh your knowledge of these requirements.</li>
-			<li>Print a physical copy of your resume to take with you to the resume.</li>
+			<li>Print a physical copy of your resume and take it with you to the interivew.</li>
 		</ul>
 	</div>
 
@@ -39,9 +39,9 @@
 		<h4>During Interview:</h4>
 		<ul>
 			<li>Be energetic and enthusiastic (most interviewers will make up their mind on an applicant within 5 minutes and spend the rest of the interview confirming their first impression!)</li>
-			<li>Think positive!</li>
+			<li>Think positive and Be Positive!</li>
 			<li>Make your selling points clear (Why should they hire you? What do you bring to the company that could benefit them?)</li>
-			<li>Towards the end of the interview, ask the interviewer whether there is anything about your background or resume that will need further clarification. Don't forget to ask this as this might be your last chance to erase any doubt the hiring manager may have about you.</li>
+			<li>Towards the end of the interview, ask the interviewer whether there is anything about you, your background, or your resume that will need further clarification. Don't forget to ask this as this might be your last chance to erase any doubt the hiring manager may have about you.</li>
 		</ul>
 	</div>
 
@@ -57,6 +57,7 @@
 				<ul>
 					<li>If you know what went wrong, work on actively improving (such as technical skills or soft skills).</li>
 					<li>If you don't know what went wrong, but suspect something did, reach out to the interviewer and ask them for feedback.</li>
+					<li>Set up mock interviews with friends and family to practice your interview skills.</li>
 				</ul>
 			</li>
 		</ul>
@@ -69,18 +70,18 @@
 	<ul>
 		<li>Arrive 10 to 15 minutes early (if you arrive earlier than that, do NOT check-in until about 15 minutes prior to your interview time.)</li>
 		<li>Go by yourself (unless a caregiver is needed). It does not give a good impression if other people come with you. If you rely on other people for a ride, ask them to wait in a nearby coffeeshop, park, etc.</li>
-		<li>Dress in Business Attire, Slacks and a nice top will do. No need for full-suits unless the company specifies one is to be worn. Do NOT wear flip flops, open-toed shoes, or tennis shoes.</li>
+		<li>Dress in Business Attire, Slacks and a nice top will do. No need for full-suits unless the company specifies one is to be worn. Do NOT wear flip flops, open-toed shoes, or tennis shoes; Don't wear shorts!.</li>
 		<li>Ensure that your face, hair, and beard are clean and groomed. Meaning, wash your face, brush your teeth, comb your hair (and beard).</li>
 		<li>Remove any facial piercings,even if the company allows this on employees. You don't want your appearance to be distracting for the wrong reasons.</li>
 		<li>If you wear makeup, keep it natural, again, you don't want your appearance to distract from your interview.</li>
 		<li>Turn off your cellphone! (Seriously, turn it off!)</li>
-		<li>Be friendly to receptionists, clerks, and any other individuals you encoutner, more often than not, they will report your interaction with them to the hiring manager! You don't want to give a negative impression before the interviewer has even met you.</li>
+		<li>Be friendly to receptionists, clerks, and any other individuals you encounter, more often than not, they will report your interaction with them to the hiring manager! You don't want to give a negative impression before the interviewer has even met you.</li>
 		<li>Shake hands firmly, but only if a hand is offered to you first.</li>
 		<li>Bring copies of your resumes, keep them in a folder or portfolio so they don't crease or wrinkle.</li>
 		<li>Bring Pen and Paper to take notes! You can refer back to your notes after the interview and when you follow up with the interviewer.</li>
 		<li>As with all types of interviews, make sure you have a list of pre-written questions for your interviewers (check below for example questions).</li>
 		<li>Prepare a list of references. Let your references know that they are references for you, so they can prepare as well.</li>
-		<li>Bring along Breath mints or floss, will allow to feel confident, especially for interviews just after breakfast or lunch times.</li>
+		<li>Bring along Breath mints or floss, this will allow you to feel confident, especially for interviews just after breakfast or lunch times.</li>
 	</ul>
 
 	<h3>Phone Interviews</h3>
